<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:id="@+id/buddies_layoutbb"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.skwibble.skwibblebook.baddies_group.Buddies_invite_activity">



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/Medium"
        android:gravity="center"
        android:weightSum="1"
        android:layout_height="50dp">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight=".15"
            android:gravity="center"
            style="@style/SelectableItemBackground"
            android:id="@+id/imageVifffew8_backbb"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="17dp"
                android:src="@mipmap/back"

                android:layout_weight="1" />
        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_weight=".7"
            android:gravity="center"

            android:layout_height="match_parent">

            <TextView
                android:text="Buddies"
                android:gravity="center"
                android:textSize="14dp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7bb"
                android:layout_weight="1" />
        </LinearLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:gravity="center"
            style="@style/SelectableItemBackground"
            android:id="@+id/imageView_ffeditbb"
            android:layout_weight=".15"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:src="@mipmap/invite_icon"

                android:layout_weight="1" />
        </RelativeLayout>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:id="@+id/invite_scrollview"
        android:visibility="invisible"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:id="@+id/first_hide_layoutbb"
                android:visibility="gone"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center"

                    android:text="@string/follower_txt"
                    android:textColor="@color/black"
                    android:id="@+id/dempo_txtbb"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"

                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="25dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal"
                        android:id="@+id/add_new_buddiesbb"
                        android:gravity="center"
                        android:visibility="visible"
                        android:background="@drawable/orange_border_btn">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:src="@mipmap/invite_orange"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/orange"
                            android:id="@+id/label_add_new_buddiesbb"
                            android:text="Enter Code"
                            android:textSize="12dp"
                            android:gravity="center"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:textAllCaps="false"
                            android:background="@android:color/transparent"/>
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:id="@+id/show_layoutbb"
                android:layout_marginBottom="15dp"
                android:layout_height="match_parent">



                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:id="@+id/acc_not_foundbb"
                        android:visibility="visible"
                        android:layout_margin="20dp"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:textSize="12dp"
                            android:textColor="@color/black"
                            android:id="@+id/acccnotfound_txtbb"
                            android:text="@string/following_txt"/>
                    </LinearLayout>
                    <com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView
                        android:id="@+id/accept_listbb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/border_color">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center"

                    android:text="@string/following_new_bottom"
                    android:textColor="@color/black"
                    android:id="@+id/dempo_txtdebb"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"

                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="25dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal"
                        android:id="@+id/add_new_buddiesdebb"
                        android:gravity="center"
                        android:visibility="visible"
                        android:background="@drawable/orange_border_btn">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:id="@+id/sdlksakdfjbb"
                            android:visibility="gone"
                            android:src="@mipmap/invite_orange"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/orange"
                            android:id="@+id/label_add_new_buddiesdebb"
                            android:text="Share"
                            android:textSize="12dp"
                            android:gravity="center"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="5dp"
                            android:textAllCaps="false"
                            android:background="@android:color/transparent"/>
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>





</RelativeLayout>
